[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/player/subscenes/arm/arm.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/player/assets/crosshair.png" type="Texture" id=3]
[ext_resource path="res://scenes/entities/player/x_hair_controller.gd" type="Script" id=4]
[ext_resource path="res://scenes/entities/player/assets/land_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/entities/player/assets/death.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/fonts/ArchitectsDaughter-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.25
bottom_radius = 0.25
height = 1.0

[sub_resource type="CylinderShape" id=2]
radius = 0.15
height = 1.0

[sub_resource type="CylinderShape" id=3]
radius = 0.05
height = 1.0

[sub_resource type="CylinderShape" id=4]
radius = 0.3
height = 1.0

[node name="player" type="KinematicBody" groups=[
"entity",
"player",
]]
script = ExtResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.441586, 0 )

[node name="Camera" type="Camera" parent="head"]
current = true

[node name="arm" parent="head/Camera" instance=ExtResource( 2 )]
transform = Transform( -0.0996991, 0, -0.00775196, -0.000563017, 0.0997359, 0.00724104, 0.00773148, 0.0072629, -0.0994358, 0.200807, -0.39758, 0.0777161 )

[node name="Control" type="Control" parent="head/Camera"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xhair" type="Sprite" parent="head/Camera/Control"]
texture = ExtResource( 3 )

[node name="pre_ui" type="Control" parent="head/Camera/Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="head/Camera/Control/pre_ui"]
margin_left = 256.0
margin_top = 164.0
margin_right = 751.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click Mouse 1 to start!"

[node name="post_ui" type="Control" parent="head/Camera/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="head/Camera/Control/post_ui"]
margin_left = 256.0
margin_top = 164.0
margin_right = 751.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mouse 1 for next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="head/Camera/Control/post_ui"]
margin_left = 44.3333
margin_top = 30.4484
margin_right = 559.333
margin_bottom = 98.4484
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.988235, 0.992157, 0.992157, 1 )
custom_colors/font_outline_modulate = Color( 0.533333, 0.72549, 0.568627, 1 )
text = "Level Time: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camera_pivot" type="Spatial" parent="head"]

[node name="third_person_camera" type="Camera" parent="head/camera_pivot"]
transform = Transform( 1, 0, 0, 0, 0.482854, 0.875701, 0, -0.875701, 0.482854, 0.0647447, 3.81118, 2.00159 )
visible = false
fov = 70.3125

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="tile_collision" type="KinematicBody" parent="." groups=[
"entity",
]]
collision_layer = 2
collision_mask = 2

[node name="tile_collision" type="CollisionShape" parent="tile_collision"]
shape = SubResource( 3 )

[node name="footstep_stuff" type="Node" parent="."]

[node name="walk_timeout" type="Timer" parent="footstep_stuff"]
wait_time = 0.1
one_shot = true

[node name="walk_player" type="AudioStreamPlayer" parent="footstep_stuff"]

[node name="boost_land_sound" type="AudioStreamPlayer" parent="footstep_stuff"]
stream = ExtResource( 5 )

[node name="death_sound" type="AudioStreamPlayer" parent="footstep_stuff"]
stream = ExtResource( 6 )

[node name="enemy_projectile_detector" type="KinematicBody" parent="." groups=[
"player",
]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="enemy_projectile_detector"]
shape = SubResource( 4 )

[connection signal="finished" from="footstep_stuff/walk_player" to="." method="_on_walk_player_finished"]
